--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+      <spring.version>5.3.17</spring.version>
   </properties>
 
   <dependencies>
@@ -38,7 +39,17 @@
      <version>3.8.4</version>
      <scope>provided</scope>
    </dependency>
- </dependencies>
+      <dependency>
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-context</artifactId>
+          <version>${spring.version}</version>
+      </dependency>
+      <dependency>
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-core</artifactId>
+          <version>${spring.version}</version>
+      </dependency>
+  </dependencies>
 
  <build>
   <plugins>
