--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,16 @@
           <artifactId>spring-core</artifactId>
           <version>${spring.version}</version>
       </dependency>
+      <dependency>
+          <groupId>org.apache.logging.log4j</groupId>
+          <artifactId>log4j-api</artifactId>
+          <version>2.6.2</version>
+      </dependency>
+      <dependency>
+          <groupId>org.apache.logging.log4j</groupId>
+          <artifactId>log4j-core</artifactId>
+          <version>2.6.2</version>
+      </dependency>
   </dependencies>
 
  <build>
