--- a/pom.xml
+++ b/pom.xml
@@ -21,30 +21,23 @@
   </properties>
 
   <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.13.2</version>
-      <scope>test</scope>
-    </dependency>
+
     <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-lang3</artifactId>
       <version>3.12.0</version>
     </dependency>
-     <dependency>
-         <groupId>org.apache.maven.plugin-tools</groupId>
-         <artifactId>maven-plugin-annotations</artifactId>
-         <version>3.6.4</version>
-         <scope>provided</scope>
-     </dependency>
-   <dependency>
-     <groupId>org.apache.maven</groupId>
-     <artifactId>maven-plugin-api</artifactId>
-     <version>3.8.4</version>
-     <scope>provided</scope>
-   </dependency>
+      <dependency>
+          <groupId>org.springframework.boot</groupId>
+          <artifactId>spring-boot-starter-test</artifactId>
+          <scope>test</scope>
+      </dependency>
+      <dependency>
+          <groupId>org.springframework.boot</groupId>
+          <artifactId>spring-boot-starter</artifactId>
+      </dependency>
+      <!--
       <dependency>
           <groupId>org.springframework</groupId>
           <artifactId>spring-context</artifactId>
@@ -65,10 +58,7 @@
           <artifactId>log4j-core</artifactId>
           <version>2.6.2</version>
       </dependency>
-      <dependency>
-          <groupId>org.springframework.boot</groupId>
-          <artifactId>spring-boot-starter-web</artifactId>
-      </dependency>
+   -->
   </dependencies>
 
  <build>
