--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,3 +5,15 @@ logging:
 
 my-properties:
   name: Pino
+
+# DATASOURCE
+## H2 ##
+spring:
+  datasource:
+    url: jdbc:h2:mem:testdb
+    username: test
+    password:
+  # JPA - Hibernate
+  jpa:
+    hibernate:
+      ddl-auto: update
