--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,13 +7,14 @@ my-properties:
   name: Pino
 
 # DATASOURCE
-## H2 ##
 spring:
   datasource:
-    url: jdbc:h2:mem:testdb
-    username: test
-    password:
+    url: jdbc:postgresql://localhost:5432/postgres
+    username: postgres
+    password: root
   # JPA - Hibernate
   jpa:
     hibernate:
       ddl-auto: update
+    properties:
+      hibernate.default_schema: shop_test
