--- a/pom.xml
+++ b/pom.xml
@@ -3,9 +3,18 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>it.adt</groupId>
   <artifactId>mvn-test-project</artifactId>
-  <packaging>jar</packaging>
+  <packaging>pom</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>mvn-test-project</name>
+    <modules>
+        <module>mvn-test-project-dto</module>
+        <module>mvn-test-project-dao</module>
+        <module>mvn-test-project-service</module>
+        <module>mvn-test-project-rest</module>
+        <module>mvn-test-project-boot</module>
+        <module>mvn-test-project-aop</module>
+        <module>mvn-test-project-common</module>
+    </modules>
+    <name>mvn-test-project</name>
   <url>http://maven.apache.org</url>
 
     <parent>
@@ -17,17 +26,47 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+      <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
       <spring.version>5.3.17</spring.version>
+      <maven.compiler.source>8</maven.compiler.source>
+      <maven.compiler.target>8</maven.compiler.target>
+      <source.plugin.version>2.4</source.plugin.version>
   </properties>
-
+  <dependencyManagement>
+      <dependencies>
+          <dependency>
+              <groupId>it.adt</groupId>
+              <artifactId>mvn-test-project-dto</artifactId>
+              <version>1.0-SNAPSHOT</version>
+          </dependency>
+          <dependency>
+              <groupId>it.adt</groupId>
+              <artifactId>mvn-test-project-dao</artifactId>
+              <version>1.0-SNAPSHOT</version>
+          </dependency>
+          <dependency>
+              <groupId>it.adt</groupId>
+              <artifactId>mvn-test-project-service</artifactId>
+              <version>1.0-SNAPSHOT</version>
+          </dependency>
+          <dependency>
+              <groupId>it.adt</groupId>
+              <artifactId>mvn-test-project-rest</artifactId>
+              <version>1.0-SNAPSHOT</version>
+          </dependency>
+          <dependency>
+              <groupId>it.adt</groupId>
+              <artifactId>mvn-test-project-aop</artifactId>
+              <version>1.0-SNAPSHOT</version>
+          </dependency>
+          <dependency>
+              <groupId>it.adt</groupId>
+              <artifactId>mvn-test-project-common</artifactId>
+              <version>1.0-SNAPSHOT</version>
+          </dependency>
+      </dependencies>
+  </dependencyManagement>
   <dependencies>
-
-    <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
-    <dependency>
-      <groupId>org.apache.commons</groupId>
-      <artifactId>commons-lang3</artifactId>
-      <version>3.12.0</version>
-    </dependency>
       <dependency>
           <groupId>org.springframework.boot</groupId>
           <artifactId>spring-boot-starter-test</artifactId>
@@ -40,87 +79,36 @@
       <dependency>
           <groupId>org.springframework.boot</groupId>
           <artifactId>spring-boot-starter-web</artifactId>
-          <version>2.6.6</version>
       </dependency>
       <dependency>
           <groupId>org.springframework.boot</groupId>
-          <artifactId>spring-boot-starter-data-jpa</artifactId>
+          <artifactId>spring-boot-starter-web-services</artifactId>
       </dependency>
-      <dependency>
-          <groupId>org.postgresql</groupId>
-          <artifactId>postgresql</artifactId>
-      </dependency>
-      <dependency>
-          <groupId>com.querydsl</groupId>
-          <artifactId>querydsl-jpa</artifactId>
-      </dependency>
-      <dependency>
-          <groupId>com.querydsl</groupId>
-          <artifactId>querydsl-apt</artifactId>
-          <scope>provided</scope>
-      </dependency>
-
-      <!--
-      <dependency>
-          <groupId>org.springframework</groupId>
-          <artifactId>spring-context</artifactId>
-          <version>${spring.version}</version>
-      </dependency>
-      <dependency>
-          <groupId>org.springframework</groupId>
-          <artifactId>spring-core</artifactId>
-          <version>${spring.version}</version>
-      </dependency>
-      <dependency>
-          <groupId>org.apache.logging.log4j</groupId>
-          <artifactId>log4j-api</artifactId>
-          <version>2.6.2</version>
-      </dependency>
-      <dependency>
-          <groupId>org.apache.logging.log4j</groupId>
-          <artifactId>log4j-core</artifactId>
-          <version>2.6.2</version>
-      </dependency>
-   -->
   </dependencies>
 
  <build>
   <plugins>
       <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>properties-maven-plugin</artifactId>
-        <version>1.1.0</version>
-        <executions>
-          <execution>
-            <phase>initialize</phase>
-            <goals>
-              <goal>read-project-properties</goal>
-            </goals>
-            <configuration>
-              <files>
-                <file>src/main/resources/test.properties</file>
-              </files>
-            </configuration>
-          </execution>
-        </executions>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <configuration>
+              <encoding>${project.build.sourceEncoding}</encoding>
+              <compilerVersion>${java.version}</compilerVersion>
+              <source>${java.version}</source>
+              <target>${java.version}</target>
+          </configuration>
       </plugin>
       <plugin>
-          <groupId>org.springframework.boot</groupId>
-          <artifactId>spring-boot-maven-plugin</artifactId>
-      </plugin>
-      <plugin>
-          <groupId>com.mysema.maven</groupId>
-          <artifactId>apt-maven-plugin</artifactId>
-          <version>1.1.3</version>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-source-plugin</artifactId>
           <executions>
               <execution>
+                  <id>attach-sources</id>
+                  <phase>verify</phase>
                   <goals>
-                      <goal>process</goal>
+                      <goal>jar</goal>
+                      <goal>test-jar</goal>
                   </goals>
-                  <configuration>
-                      <outputDirectory>target/generated-sources</outputDirectory>
-                      <processor>com.querydsl.apt.jpa.JPAAnnotationProcessor</processor>
-                  </configuration>
               </execution>
           </executions>
       </plugin>
