--- a/mvn-test-project-purchase-producer/pom.xml
+++ b/mvn-test-project-purchase-producer/pom.xml
@@ -18,6 +18,14 @@
         </dependency>
         <dependency>
             <groupId>it.adt</groupId>
+            <artifactId>mvn-test-project-dao</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>it.adt</groupId>
+            <artifactId>mvn-test-project-service</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>it.adt</groupId>
             <artifactId>mvn-test-project-common</artifactId>
         </dependency>
         <!-- https://mvnrepository.com/artifact/org.springframework.kafka/spring-kafka -->
