--- a/pom.xml
+++ b/pom.xml
@@ -29,9 +29,10 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
       <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
       <spring.version>5.3.17</spring.version>
-      <maven.compiler.source>8</maven.compiler.source>
-      <maven.compiler.target>8</maven.compiler.target>
+      <maven.compiler.source>11</maven.compiler.source>
+      <maven.compiler.target>11</maven.compiler.target>
       <source.plugin.version>2.4</source.plugin.version>
+      <java.version>11</java.version>
   </properties>
   <dependencyManagement>
       <dependencies>
@@ -94,6 +95,12 @@
           <artifactId>spring-kafka-test</artifactId>
           <scope>test</scope>
       </dependency>
+      <dependency>
+          <groupId>org.mapstruct</groupId>
+          <artifactId>mapstruct</artifactId>
+          <version>1.5.1.Final</version>
+      </dependency>
+
   </dependencies>
 
  <build>
@@ -106,6 +113,13 @@
               <compilerVersion>${java.version}</compilerVersion>
               <source>${java.version}</source>
               <target>${java.version}</target>
+              <annotationProcessorPaths>
+                  <path>
+                      <groupId>org.mapstruct</groupId>
+                      <artifactId>mapstruct-processor</artifactId>
+                      <version>1.5.1.Final</version>
+                  </path>
+              </annotationProcessorPaths>
           </configuration>
       </plugin>
       <plugin>
