--- a/mvn-test-project-boot/pom.xml
+++ b/mvn-test-project-boot/pom.xml
@@ -47,7 +47,7 @@
                         </goals>
                         <configuration>
                             <files>
-                                <file>src/main/resources/test.properties</file>
+                                <file>src/main/resources/application.yml</file>
                             </files>
                         </configuration>
                     </execution>
